--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 </head>
 <body>
 
-    
+    <!-- <button>нажми</button> -->
+    <form action="">
+        <label for="">
+            <span>RUB</span>
+            <input id="inputRub" type="text">
+        </label>
+        <label for="">
+            <span>USD</span>
+            <input id="inputUsd" type="text">
+        </label>
+    </form>
     
     <script src="./js/main.js"></script>
 </body>
