--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- <button>нажми</button> -->
-    <form action="">
+    <!-- <form action="">
         <label for="">
             <span>RUB</span>
             <input id="inputRub" type="text">
@@ -19,7 +19,7 @@
             <span>USD</span>
             <input id="inputUsd" type="text">
         </label>
-    </form>
+    </form> -->
     
     <script src="./js/main.js"></script>
 </body>
