--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Area</title>
-    <link rel="stylesheet" href="/css//style.css">
+    <link rel="stylesheet" href="./css//reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
 
-    <!-- <button>нажми</button> -->
-    <!-- <form action="">
-        <label for="">
-            <span>RUB</span>
-            <input id="inputRub" type="text">
-        </label>
-        <label for="">
-            <span>USD</span>
-            <input id="inputUsd" type="text">
-        </label>
-    </form> -->
-    
+<body>
+    <div class="wrapper">
+        <form class="form-signin">
+            <h2 class="form-signin-heading">This is form</h2>
+            <input type="text" class="form-control">
+            <input id="checkbox" type="checkbox">
+            <button class="btn btn-block btn-lg btn-primary">Confirm</button>
+        </form>
+        <button id="color" class="btn btn-block btn-lg btn-primary">Change color</button>
+    </div>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
